# ALPACA

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  Dockerfile  DockerfileAndroid  DockerfileEmscripten  LICENSE.txt  Pipfile  README.md  pre.js  prepare_assets.py  prepare_assets.spec  tts.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build_python.yml  msvc.yml  windows.yml
android/: .gitignore  build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  bootstrap.cpp
android/app/src/main/java/com/alpaca/game/: MainActivity.java  TvActivity.java
android/app/src/main/res/drawable-v24/: ic_banner_foreground.xml  ic_channel_foreground.xml
android/app/src/main/res/values/: strings.xml  style.xml
android/app/src/main/res/values-v27/: style.xml
android/fastlane/: Appfile
android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
android/gradle/wrapper/: gradle-wrapper.properties
data-src/: spine_export_template.export.json
data-src/alpaca/: alpaca.json  alpaca.spine  alpaca.xcf
data-src/banana/: banana.json  banana.spine  banana.xcf
data-src/config/: game.json
data-src/dialog/: dialogs.schnack
data-src/pointer/: pointer.json  pointer.ora  pointer.spine  pointer.xcf
data-src/scene1/: Scene.json  Scene.xcf  scene1.spine
data-src/scene2/: Scene.json  scene2.spine
data-src/scenes/: test_chamber_one.json  test_chamber_two.json
data-src/scripts/: banana_clicked.lua  banana_inventory.lua  scene2.lua
data-src/speechbubble/: sliceImage.sh  speechbubble.json  speechbubble.spine  speechbubble.tps  speechbubble.xcf
data/alpaca/: alpaca.atlas  alpaca.json
data/banana/: banana.atlas  banana.json
data/config/: game.json
data/dialog/: dialogs.schnack
data/pointer/: pointer.atlas  pointer.json
data/rhubarb/: en_7Rsc3TCAja.json
data/scene1/: scene1.atlas  scene1.json
data/scene2/: scene2.atlas  scene2.json
data/scenes/: test_chamber_one.json  test_chamber_two.json
data/scripts/: banana_clicked.lua  head.lua  scene1.lua  scene2.lua  test_chamber_one.lua  test_chamber_tw.lua  test_chamber_two.lua
data/speechbubble/: speechbubble.atlas  speechbubble.json
data/spineboy-ess/: spineboy-ess.atlas  spineboy-ess.json
data/spineboy-pro/: spineboy-pro.atlas  spineboy-pro.json
ios/: Info.plist  Storyboard.storyboard  resize_icons.sh
ios/Media.xcassets/AppIcon.appiconset/: Contents.json
lua-docs/: mkdocs.yml
lua-docs/docs/: asset_pipeline.md  dialogs.md  index.md  lua.md  made_with.md  readme.md  scene.md  spine.md
src/: FileWatch.hpp  audio_manager.cpp  audio_manager.hpp  background.cpp  background.hpp  game.cpp  game.hpp  hotspot.cpp  hotspot.hpp  interactable_object.cpp  interactable_object.hpp  lua.cpp  lua_callback.cpp  lua_callback.hpp  main.cpp  mouse_info.cpp  mouse_info.hpp  player.cpp  player.hpp  pointer.cpp  pointer.hpp  polylabel.hpp  scene.cpp  scene.hpp  scene_fade.cpp  scene_fade.hpp  shader_cache.cpp  shader_cache.hpp  skeleton_drawable.cpp  skeleton_drawable.hpp  spine_object.cpp  spine_object.hpp
src/dialog/: dialog_manager.cpp  dialog_manager.hpp  speech_bubble.cpp  speech_bubble.hpp
src/input/: control.cpp  control.hpp  gamepad.cpp  gamepad.hpp  keyboard.cpp  keyboard.hpp
test/: CMakeLists.txt  test_game.cpp  test_main.cpp  ut_config.hpp
windows/: convert.sh  installer.nsi  main.rc
windows_bin/: LICENSE.md  LICENSE.txt
windows_bin/res/sphinx/: cmudict-en-us.dict
windows_bin/res/sphinx/acoustic-model/: README  feat.params  noisedict
